src/objects/FieloPLT__PublicSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Application configuration.</description>
    <fields>
        <fullName>ContactRelationshipClass__c</fullName>
        <description>Class name which shows how Members relate to Contacts. If empty, Member&apos;s email is used.</description>
        <inlineHelpText>Class name which shows how Members relate to Contacts.</inlineHelpText>
        <label>Contact Relationship class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloVersion__c</fullName>
        <description>Fielo installed version.</description>
        <inlineHelpText>Fielo installed version.</inlineHelpText>
        <label>Fielo Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <description>Instance (server) name used by the ORG (Backend)</description>
        <inlineHelpText>Instance (server) name used by the ORG (Backend)</inlineHelpText>
        <label>Instance</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptimizedProgramQuery__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When ticked, the Site only retrieves the Program custom fields defined in the Program fieldset.</description>
        <inlineHelpText>When ticked, the Site only retrieves the Program custom fields defined in the Program fieldset.</inlineHelpText>
        <label>Optimized Program query</label>
        <type>Checkbox</type>
    </fields>
    <label>Public Settings</label>
</CustomObject>